# fred-webadmin

./: .coverage  .gitattributes  .gitignore  .gitlab-ci.yml  .stylelintrc  AUTHORS  CHANGELOG.rst  ChangeLog  MANIFEST.in  Makefile  README  achoo.py  adif.py  config.py  example-perms.csv  fred-webadmin  fred-webadmin-server  fred-webadmin-server.install  fred-webadmin.install  fred-webadmin.spec  perms.csv  pylogger  setup.cfg  setup.cfg.template  setup.py  webadmin.py  webadmin_cfg.py  webadmin_cfg.py.example  webadmin_cfg.py.install
.copr/: fred-webadmin.spec
conf/: webadmin_cfg.py  webadmin_cfg.py.example
contrib/fedora/: Makefile  fred-webadmin.service  fred-webadmin.spec  webadmin_cfg.py
data/css/: basesite.css
data/js/: filtertable.js
doc/: INSTALL  INSTALL.txt
filter_test/: get_detail_test.py  get_filter_id.py  request_details.py  request_query_timeout.py  request_query_timeout2.py  test_mojeid.py  test_query_slow.py  test_request.sh  test_request_tweak1.py  test_request_tweak2.py  test_request_tweak3.py  tl3.py  tl_only_filter.py
fred_webadmin/: adif.py  cache.py  config.py  corba.py  corba_auth.py  corbalazy.py  corbarecoder.py  customview.py  enums.py  exposed.py  info.py  itertable.py  ldap_auth.py  mappings.py  menunode.py  messages.py  nulltype.py  option_parse.py  sessionlogger.py  setuplog.py  translation.py  user.py  utils.py
fred_webadmin/auth/: corba_auth.py  ldap_auth.py
freddist/: file_util.py
lib/: corbarecoder.py  itertable.py
locale/: cs_CZ.po  en_US.po  messages.pot
tests/: README  testcorba.py  testcorba2.py
(+154 files in other folders)
