[options]
zip_safe = False

[compile_catalog]
domain = adif
directory = fred_webadmin/locale

[bdist_rpm]
requires=fred-pylogger, fred-idl, python-ldap, python-simplejson, python-dns, python-cherrypy, python-omniORB, omniORB-devel, omniORB-servers, redhat-lsb
install-extra-opts=--prefix=/usr --install-sysconf=/etc --install-localstate=/var --no-check-deps
